testdata/test/resources/com/yafred/asn1/test/should_fail/enumerated_duplicate_number1.asn
Enum1 DEFINITIONS ::=
BEGIN

A ::= ENUMERATED {a, b, ..., c(0)} -- invalid, since both 'a' and 'c' equal 0

END